selfhost/test/typechecker/invocation_generics_given_error_type_mismatch.out
Error at %FILE_NAME%:3:18
Type mismatch for parameter 't'
  |  val _ = foo<Int>("abc")
                      ^
Expected: Int
but instead found: String
